# Grounded-RAG-over-Wikipedia-articles-dataset

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
docs/: ADRs.md  AI-ARCHITECTURE.md  API-CONTRACTS.md  ARCHITECTURE.md  DATA-MODEL.md  PRD.md  REQUIREMENTS.md  ROADMAP.md
scripts/: eval_m1.py  eval_m2.py  eval_m3.py  eval_m4.py  eval_m5.py  ingest.py  verify_m0.py
src/grounded_rag/: config.py
src/grounded_rag/cache/: cache.py  records.py  store.py
src/grounded_rag/eval/: eval_set.json  eval_set.py
src/grounded_rag/faithfulness/: faithfulness.py  prompts.py  records.py
src/grounded_rag/generation/: generate.py  prompts.py  records.py
src/grounded_rag/graph/: build.py  deps.py  nodes.py  run.py  state.py  tool.py
src/grounded_rag/ingestion/: chunker.py  embeddings.py  ids.py  loader.py  metadata.py  pipeline.py  qdrant_store.py  records.py
src/grounded_rag/rerank/: rerank.py
src/grounded_rag/retrieval/: filters.py  records.py  retrieve.py
src/grounded_rag/rewrite/: prompts.py  records.py  rewrite.py
src/grounded_rag/sufficiency/: prompts.py  records.py  sufficiency.py
tests/: test_chunker.py  test_faithfulness.py  test_generate.py  test_generation_prompts.py  test_graph_nodes.py  test_ids.py  test_metadata.py  test_rerank.py  test_retrieval_filters.py  test_rewrite.py  test_sufficiency.py
