[project]
name = "grounded-rag"
version = "0.1.0"
description = "Grounded RAG over a Wikipedia article corpus"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.20,<3",
    "tiktoken>=0.7,<1",
    "pysbd>=0.3,<1",
    "openai>=1.40,<2",
    "fastembed>=0.3,<1",
    "qdrant-client>=1.10,<2",
    "python-dotenv>=1.0,<2",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
